# psvc

./: .gitignore  default.conf  psvc.spec  pyproject.toml  pytest.ini  readme.md  server.conf  server.py  service.py  test_imports.py  test_ps.conf
.github/workflows/: ci.yml
.test/: service_test.conf  service_test.py
examples/: update_example.py
examples/echo_service/: VERIFICATION_REPORT.md  client.json  client.py  server.json  server.py
examples/file_mirror/: agent.py  psvc.json  server.py
psvc/: __init__.py  control.py  log.py  sockets.py  threads.py  works.py
pyservice/: __init__.py  control.py  file.py  log.py  main.py  server.py  sockets.py  threads.py  works.py
received_files/agent1/home/manager/docs/: guide.md  readme.md
received_files/agent1/home/manager/test_files/: test1.txt
src/: server.conf  service.py
src/psvc/: __init__.py  auto_update.py  builder.py  cmd.py  comp.py  component.py  config.py  control.py  main.py  manage.py  network.py  release.py  server.py  update.py
src/psvc/utils/: __init__.py  checksum.py  db.py  version.py
test/: sock_test.conf  sock_test.py  t.py  test.conf  test.py  test_ps.conf  test_ps.py  test_server.conf  test_server.py
tests/: .gitignore  PYINSTALLER_TESTS.md  README.md  TEST_RESULTS.md  conftest.py  echo_app.py  test.py  test_app  test_architecture.py  test_build_release.py  test_build_release_inte.py  test_builder.py  test_checksum.py  test_config.py  test_echo.py  test_echo_inte.py  test_full_update_workflow.py  test_install_logic.py  test_integration_echo.py  test_integration_service.py  test_integration_update.py  test_pyinstaller_build.py  test_self_update_exe.py  test_self_update_simple.py  test_send_versions.py  test_update.py  test_update_inte.py  test_version.py
updates/: test_program.py
