[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psvc"
version = "0.3.1"
description = "Lightweight Python-based service management framework"
authors = [
  { name="Eom Kyoungjun", email="adghk01234@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "aiofiles>=23.2.1",
]

[project.urls]
Homepage = "https://github.com/adghk0/psvc"
Documentation = "https://github.com/adghk0/psvc"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"