[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psvc"
version = "0.5.3"
description = "A Python service framework with components for networking, commands, and self-updating."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=23.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0"
]